--- a/src/components/serach/Search.css
+++ b/src/components/serach/Search.css
@@ -2,7 +2,7 @@
 
 body {
    background: #f2f2f2;
-   font-family: 'Open Sans', sans-serif;
+   font-family: "Open Sans", sans-serif;
 }
 
 .search {
@@ -13,29 +13,45 @@ body {
 
 .searchTerm {
    width: 100%;
-   border: 3px solid #00B4CC;
+   border: 4px solid #00b4cc;
    border-right: none;
-   padding: 5px;
-   height: 40px;
+   padding: 3px;
+   height: 38px;
    border-radius: 5px 0 0 5px;
    outline: none;
-   color: #9DBFAF;
+   color: #9dbfaf;
+   font-size: medium;
 }
 
 .searchTerm:focus {
-   color: #00B4CC;
+   color: #00b4cc;
 }
 
 .searchButton {
-   width: 45px;
-   height: 55px;
-   border: 1px solid #00B4CC;
-   background: #00B4CC;
+   width: 105px;
+   height: 52px;
+   border: 1px solid #00b4cc;
+   background: #00b4cc;
    text-align: center;
    color: #fff;
    border-radius: 0 5px 5px 0;
    cursor: pointer;
-   font-size: 20px;
+   font-size: large;
+}
+
+.recommend {
+   width: 100%;
+   position: static;
+   display: flex;
+   font-weight: normal;
+}
+
+.recommend.sel {
+   background-color: cornflowerblue;
+}
+
+.recommend i {
+   font-weight: bold;
 }
 
 /*Resize the wrap to see the search bar change!*/
@@ -43,7 +59,7 @@ body {
    text-align: center;
    width: 50%;
    position: absolute;
-   top: 30%;
+   top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
 }
