--- a/src/components/serach/Search.css
+++ b/src/components/serach/Search.css
@@ -1,10 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-body {
-   background: #f2f2f2;
-   font-family: "Open Sans", sans-serif;
-}
-
 .search {
    width: 100%;
    position: relative;
@@ -39,27 +32,28 @@ body {
    font-size: large;
 }
 
-.recommend {
+ul.recommendContainer {
    width: 100%;
-   position: static;
-   display: flex;
+   position: relative;
+   /* display: flex; */
    font-weight: normal;
+   overflow-y: auto;
+   text-align: left;
+   list-style: none;
 }
 
-.recommend.sel {
+li.recommendContainer {
+   position: relative;
+   float: left;
+   height: 100%;
+   width: 25%;
+   padding-right: 0px;
+}
+
+li.recommendContainer.sel {
    background-color: cornflowerblue;
 }
 
-.recommend i {
+li.recommendContainer i {
    font-weight: bold;
-}
-
-/*Resize the wrap to see the search bar change!*/
-.wrap {
-   text-align: center;
-   width: 50%;
-   position: absolute;
-   top: 20%;
-   left: 50%;
-   transform: translate(-50%, -50%);
 }
